# docs/swagger.json
@@ -6,7 +6,7 @@
         "contact": {},
         "version": "1.0"
     },
-    "host": "127.0.0.1:8080",
+    "host": "127.0.0.1:8000",
     "basePath": "/",
     "paths": {
         "/result/{task_id}": {
@@ -75,8 +75,8 @@
                 ],
                 "summary": "Post task",
                 "responses": {
-                    "200": {
-                        "description": "OK"
+                    "201": {
+                        "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request"
